# scalable-textgrad

./: .gitignore  README.md  pyproject.toml
design/: api.md  architecture.md  codex.md  flow.md  libraries.md  version_manager.md
examples/: mock_weather_run.py  run_components_demo.py
src/scalable_textgrad/: __init__.py  ci.py  codex_client.py  config.py  git_repo.py  logging_utils.py  metadata.py  process.py  registry.py  state_manager.py
src/scalable_textgrad/architect/: __init__.py  service.py
src/scalable_textgrad/version_manager/: __init__.py  service.py
tests/: test_architect_service.py  test_codex_runner.py  test_registry.py  test_state_manager.py
